@@ -1,1 +1,3 @@
 mobile
+darkHaloBehind
+sleeping
